[package]
name = "ddtrace"
version = "0.2.1"
authors = ["David Steiner <david_j_steiner@yahoo.co.nz", "Fergus Strangways-Dixon <fergusdixon101@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Utilities for integrating Datadog with tracing"
readme = "README.md"
homepage = "https://github.com/Validus-Risk-Management/ddtrace"
repository = "https://github.com/Validus-Risk-Management/ddtrace"
keywords = ["datadog", "tracing", "opentelemetry", "axum"]
categories = ["web-programming"]
exclude = [".pre-commit-config.yaml"]

[features]
axum = ["dep:axum-tracing-opentelemetry"]
tonic = ["dep:tonic-tracing-opentelemetry"]
tracing_level_info = [
    "axum-tracing-opentelemetry/tracing_level_info",
    "tonic-tracing-opentelemetry/tracing_level_info",
]

[dependencies]
axum-tracing-opentelemetry = { version = "0.29", optional = true }
chrono = "0.4"
opentelemetry = "0.30"
opentelemetry_sdk = "0.30"
opentelemetry-datadog = "0.18"
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic", "http-proto"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.12"
tonic-tracing-opentelemetry = { version = "0.29", optional = true }
tracing = "0.1"
tracing-opentelemetry = "0.31"
tracing-serde = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
