[package]
name = "axum-full-example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
ddtrace = { path = "../..", features = ["axum"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
